force-app/main/default/objects/BMCServiceDesk__BMC_BusinessService__c/BMCServiceDesk__BMC_BusinessService__c.object-meta.xml
<CustomObject>
    <description>BMC_BusinessService. CMDB Class that stores information about business or technical services. A business service can be provided from one business to another, or from one organization to another within a business (for example, customer support, order processing, and payroll).  A technical service can be provided by an IT organization to support business services or IT&apos;s own operations (for example, employee provisioning, backup and recovery, and self-service help desk). It can also represent a service offering (captured by a certain type of infrastructure) and the Service Level Targets associated with that service (for example, Web farms or storage).  This class has no corresponding DMTF CIM class.</description>
    <label>Business Service</label>
    <nameField>
        <label>BMC_BusinessService Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Services</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>