force-app/main/default/objects/BMCServiceDesk__BMC_BusinessService__c/fields/BMCServiceDesk__Asset__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Asset__c</fullName>
    <formula>BMCServiceDesk__FKBMC_BaseElement__r.BMCServiceDesk__CITag__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Asset #</label>
    <type>Text</type>
</CustomField>