force-app/main/default/objects/BMCServiceDesk__BMC_BusinessService__c/fields/BMCServiceDesk__Base_Customer_Price__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Base_Customer_Price__c</fullName>
    <label>Price</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>