force-app/main/default/objects/BMCServiceDesk__BMC_BusinessService__c/fields/BMCServiceDesk__Class_Name__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Class_Name__c</fullName>
    <formula>BMCServiceDesk__FKBMC_BaseElement__r.BMCServiceDesk__ClassName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Class Name</label>
    <type>Text</type>
</CustomField>