force-app/main/default/objects/BMCServiceDesk__BMC_BusinessService__c/fields/BMCServiceDesk__CostDescription__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__CostDescription__c</fullName>
    <label>Cost Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>