force-app/main/default/objects/BMCServiceDesk__BMC_BusinessService__c/fields/BMCServiceDesk__CostOption1__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__CostOption1__c</fullName>
    <label>Cost Option1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Named User</fullName>
            </value>
            <value>
                <fullName>Item</fullName>
            </value>
            <value>
                <fullName>Site</fullName>
            </value>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>Instance</fullName>
            </value>
            <value>
                <fullName>Adapter</fullName>
            </value>
            <value>
                <fullName>Installed Server</fullName>
            </value>
            <value>
                <fullName>Asset</fullName>
            </value>
            <value>
                <fullName>Concurrent user</fullName>
            </value>
            <value>
                <fullName>CPU</fullName>
            </value>
            <value>
                <fullName>Storage in GB</fullName>
            </value>
            <value>
                <fullName>Storage in TB</fullName>
            </value>
            <value>
                <fullName>License</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>