force-app/main/default/objects/BMCServiceDesk__BMC_BusinessService__c/fields/BMCServiceDesk__End_Date__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__End_Date__c</fullName>
    <label>End Date</label>
    <type>DateTime</type>
</CustomField>