force-app/main/default/objects/BMCServiceDesk__BMC_BusinessService__c/fields/BMCServiceDesk__FKBMC_BaseElement__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKBMC_BaseElement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Base Element</label>
    <referenceTo>BMCServiceDesk__BMC_BaseElement__c</referenceTo>
    <relationshipLabel>Business Services</relationshipLabel>
    <relationshipName>Business_Services</relationshipName>
    <type>Lookup</type>
</CustomField>