force-app/main/default/objects/BMCServiceDesk__BMC_BusinessService__c/fields/BMCServiceDesk__FKBusinessService__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKBusinessService__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sub-Service of</label>
    <referenceTo>BMCServiceDesk__BMC_BaseElement__c</referenceTo>
    <relationshipLabel>Business Services</relationshipLabel>
    <relationshipName>Business_Services1</relationshipName>
    <type>Lookup</type>
</CustomField>