force-app/main/default/objects/BMCServiceDesk__BMC_BusinessService__c/fields/BMCServiceDesk__Service_hours__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Service_hours__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Hours</label>
    <referenceTo>BusinessHours</referenceTo>
    <relationshipName>Business_Services</relationshipName>
    <type>Lookup</type>
</CustomField>