force-app/main/default/objects/BMCServiceDesk__BMC_BusinessService__c/fields/BMCServiceDesk__Service_Owner__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Service_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Business_Services</relationshipName>
    <type>Lookup</type>
</CustomField>