force-app/main/default/objects/BMCServiceDesk__BMC_BusinessService__c/fields/BMCServiceDesk__Service_Provider__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Service_Provider__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Provider</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Business Services</relationshipLabel>
    <relationshipName>Business_Services</relationshipName>
    <type>Lookup</type>
</CustomField>