force-app/main/default/objects/BMCServiceDesk__BMC_BusinessService__c/fields/BMCServiceDesk__ServiceType__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__ServiceType__c</fullName>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>BusinessService</fullName>
            </value>
            <value>
                <fullName>TechnicalService</fullName>
            </value>
            <value>
                <fullName>Offering</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>