force-app/main/default/objects/BMCServiceDesk__BMC_BusinessService__c/fields/BMCServiceDesk__Site__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Site__c</fullName>
    <formula>BMCServiceDesk__FKBMC_BaseElement__r.BMCServiceDesk__Site__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site</label>
    <type>Text</type>
</CustomField>