force-app/main/default/objects/BMCServiceDesk__BMC_BusinessService__c/fields/BMCServiceDesk__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Start_Date__c</fullName>
    <label>Start Date</label>
    <type>DateTime</type>
</CustomField>