force-app/main/default/objects/BMCServiceDesk__BMC_BusinessService__c/fields/BMCServiceDesk__Vendor__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Business Services (Vendor)</relationshipLabel>
    <relationshipName>Business_Services1</relationshipName>
    <type>Lookup</type>
</CustomField>