force-app/main/default/objects/BMCServiceDesk__BMC_BusinessService__c/validationRules/BMCServiceDesk__Start_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>BMCServiceDesk__Start_Date_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>BMCServiceDesk__Start_Date__c  &gt;  BMCServiceDesk__End_Date__c</errorConditionFormula>
    <errorMessage>Start date should be lesser than End date</errorMessage>
</ValidationRule>