force-app/main/default/objects/BMCServiceDesk__BMC_BusinessService__c/validationRules/BMCServiceDesk__Validate_Parent_service_for_an_offering.validationRule-meta.xml
<ValidationRule>
    <fullName>BMCServiceDesk__Validate_Parent_service_for_an_offering</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(BMCServiceDesk__ServiceType__c, &apos;Offering&apos;)  &amp;&amp;   ISBLANK(BMCServiceDesk__FKBusinessService__c)</errorConditionFormula>
    <errorMessage>Please enter the parent service in the Sub-Service of field</errorMessage>
</ValidationRule>