force-app/main/default/objects/BMCServiceDesk__BMC_BusinessService__c/validationRules/BMCServiceDesk__Validate_Subservice_of.validationRule-meta.xml
<ValidationRule>
    <fullName>BMCServiceDesk__Validate_Subservice_of</fullName>
    <active>true</active>
    <errorConditionFormula>Not(ISBLANK( BMCServiceDesk__FKBusinessService__c )) &amp;&amp; UPPER(BMCServiceDesk__FKBusinessService__r.BMCServiceDesk__Class__c) != &apos;BMC_BUSINESSSERVICE&apos;</errorConditionFormula>
    <errorMessage>The Sub-Service of attribute can only be populated with a Business Service Instance.</errorMessage>
</ValidationRule>